package com.ustc.location;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

public class bdmapActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_bdmap);
    }
}
