package com.ustc.location.network;

public class NetUtils {

   // public static
}
